# cnpj

./: .gitignore  Dockerfile  POSTGRES.md  README-EN.MD  README.en.md  README.md  docker-compose.yml  execute-model.bat  package-lock.json  package.json  pyproject.toml  requirements.txt
config/: config.yaml  pgadmin-pgpass  pgadmin-servers.json
docker/: docker-compose.yml
docker/mongo-init/: 01-create-user.js  create-indexes.js
scripts/: analyze_parquet.py  cnpj_extractor.cjs  cnpj_extractor.py  cnpj_importer.py  cnpj_merger.py  cnpj_to_jsonl.py  import_to_mongo.ps1  import_to_mongo.sh  import_to_mongodb.py  import_to_postgres.py  setup.sh
