[project]
name = "cnpj-extractor"
version = "0.1.0"
description = "CNPJ Data Extractor - Extrai e processa informações de CNPJ de empresas brasileiras"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Joao M. Feck", email = "joaomfeck@gmail.com" }
]

dependencies = [
    "beautifulsoup4==4.13.4",
    "bs4==0.0.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "cramjam==2.10.0",
    "fastparquet==2024.11.0",
    "fsspec==2025.5.1",
    "idna==3.10",
    "numpy==2.2.6",
    "packaging==25.0",
    "pandas==2.2.3",
    "psycopg2-binary>=2.9.11",
    "pyaml==25.1.0",
    "pyarrow==20.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "six==1.17.0",
    "soupsieve==2.7",
    "tqdm==4.67.1",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "config"]
